# amightyhost

./: README.md  TODO.md  amightyhost.cabal  stack.yaml
app/: Main.hs
data/: abode.txt  animals_plural.txt  animals_sing.txt  armour.txt  beverage_adj.txt  clothes.txt  colours.txt  desert.txt  desert_adj.txt  flourish.txt  forests.txt  groves.txt  hero_adj.txt  hero_noun.txt  heroes.txt  hunt.txt  mountain_adj.txt  mountains.txt  peaks.txt  phenomena.txt  places.txt  sands.txt  shinies.txt  shinies_countable.txt  shining.txt  shout.txt  shout_adv.txt  shout_int.txt  shouting.txt  shouting_intransitive.txt  slogans.txt  tree_adj.txt  trees.txt  water_adj.txt  water_drink.txt  weapons.txt  wearing.txt  weather.txt
src/: TextGen.hs
