name:                amightyhost
version:             0.3.0.0
synopsis:            A generator of randomised hordes 
description:         Please see README.md
homepage:            https://github.com/spikelynch/amightyhost#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 mike lynch here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TextGen
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.1.3 
                     , random >= 1.1
  default-language:    Haskell2010

executable amightyhost-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , amightyhost
                     , text
                     , random
                     , monad-loops
  default-language:    Haskell2010

test-suite amightyhost-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , amightyhost
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/spikelynch/amightyhost
