name:                amightyhost
version:             1.1.0.0
synopsis:            A generator of randomised hordes 
description:         Please see README.md
homepage:            https://github.com/spikelynch/amightyhost#readme
license:             BSD3
license-file:        LICENSE
author:              Mike Lynch
maintainer:          example@example.com
copyright:           2016 Mike Lynch
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
--  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.1.3 
                     , random >= 1.1
  default-language:    Haskell2010

executable amightyhost-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , amightyhost
                     , text
                     , random
                     , monad-loops
                     , textgen >= 0.1
  default-language:    Haskell2010

test-suite amightyhost-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , amightyhost
                     , textgen >= 0.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/spikelynch/amightyhost
